--- a/styles.css
+++ b/styles.css
@@ -1,27 +1,69 @@
-/*  your css code here. If applicable */
+*{
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
+}
+
 .container{
-	display: grid;
-	grid-template-columns: 1fr 1fr 1fr;
-	grid-template-rows: 100px 500px 100px;
-	grid-template-areas: 
-	"h h h"
-	"s m n";
-	.header{
-		grid-area: h;
-	}
-	.latest-news-section{
-		grid-area: s;
-	}
-	.main{
-		grid-area: m;
-	}
-	.pictorial-news-section{
-		grid-area: n
-	}
-	.item{
-	border: 1px solid;
-	}
+	width: 1100px;
+	/* background-color: red */
 }
+
 img{
-	width: 150px;
+	width: 200px;
+	height: 90px;
 }
+
+.header{
+	background-color: #011e29;
+	color: white;
+	text-align: center;
+	padding: 15px;
+	margin: 5px;
+	width: 100%;
+}
+
+.section{
+	display: flex;
+	width:100%;
+}
+.latest-news-section,.main,.pictorial-news-section{
+	border: none;
+	border-radius: 15px;
+	 box-shadow: 10px 10px 5px #aaaaaa;
+	/* min-height: 70vh; */
+	/* width: 70vw; */
+	padding: 20px
+}
+.latest-news-section{
+	/* min-height: 30vh; */
+	height: 150px;
+	width: 250px;
+	margin: 10px;
+	text-align: center;
+	padding-left: 35px;
+	background-color: white;
+}
+
+.main{
+	/* min-height: 50vh; */
+	height: 200px;
+	width: 550px;
+	margin: 10px;
+	text-align: center;
+	padding-left: 35px;
+	background-color: white;
+}
+	
+
+.pictorial-news-section{
+	/* min-height: 70vh; */
+	height: 350px;
+	width: 250px;
+	margin: 10px;
+	text-align: center;
+	padding: 15px;
+	background-color: white;
+}
+
+
